# formatted_table

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  people.cpp
.github/workflows/: ci-cd.yml
include/: people.hpp
test/: test_people.cpp
